<resources>
    <string name="app_name">Tour Guide</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="choose">Choose a city to get started</string>
    <string name="welcome">Welcome to Express Vladimir Region tour guide!</string>
    <string name="back">Back</string>
    <string name="nav_header">Express Vladimir region tour guide</string>
    <string name="about">About</string>
    <string name="vladimir">Vladimir</string>
    <string name="suzdal">Suzdal</string>
    <string name="murom">Murom</string>
    <string name="raduzhnyy">Raduzhnyy</string>
    <string name="golden_gates">Golden Gates</string>
    <string name="golden_gates_address">Bol\'shaya Moskovskaya str., 1A</string>
    <string name="central_park">Central Park of Vladimir\'s 850th anniversary</string>
    <string name="central_park_address">Between Baturina, Mira, Mikhailovskaya and Suzdalskaya streets</string>
    <string name="dmitrievskiy_cathedral">Dmitrievskiy Cathedral</string>
    <string name="dmitrievskiy_cathedral_address">Sobornaya ploschad\' (in the center of Vladimir)</string>
    <string name="georgievakaya_street">Georgievskaya Street</string>
    <string name="georgievakaya_street_address">(obviously) Georgievskaya Street</string>
    <string name="city_council">City Council</string>
    <string name="city_council_address">Bol\'shaya Moskovskaya str., 54</string>
    <string name="crystal_museum">Crystal Museum</string>
    <string name="crystal_museum_address">Dvoryanskaya str., 2</string>
    <string name="patriarchal_gardens">Patriarchal Gardens Park</string>
    <string name="patriarchal_gardens_address">Gor\'kogo str., d.62</string>
    <string name="alexander_nevskiy_square">Alexander Nevskiy Square</string>
    <string name="alexander_nevskiy_square_address">Bol\'shaya Moskovskaya str., 66a</string>
    <string name="observation_deck">Observation Deck</string>
    <string name="observation_deck_address">At the end of Pushkin\'s Park</string>
    <string name="spasskiy_hill">Spasskiy Hill</string>
    <string name="spasskiy_hill_address">Near Water Tower on Kozlov Val str.</string>
    <string name="old_pharmacy">Old Pharmacy</string>
    <string name="old_pharmacy_address">Georgievskaya str., 3</string>
    <string name="lunacharskiy_theatre">Lunacharskiy Drama Theatre</string>
    <string name="lunacharskiy_theatre_address">Dvoryanskaya str., 4</string>
    <string name="uspenskiy_cathedral">Uspenskiy Cathedral</string>
    <string name="uspenskiy_cathedral_address">Sobornaya square</string>
    <string name="water_tower">Water Tower</string>
    <string name="water_tower_address">from theatre square to Kozlov Val str.</string>
    <string name="ww2_memorial">World War 2 Memorial</string>
    <string name="ww2_memorial_address">Victory Square, where Lenin prospect crosses Chaikovskiy str.</string>
    <string name="eternal_fire">Eternal Fire</string>
    <string name="mead">Suzdal Mead</string>
    <string name="pokrovskiy_monastery">Pokrovskiy monastery</string>
    <string name="pozharskiy_monument">Monument to Dmitriy Pozharskiy</string>
    <string name="rizopolozhenskiy_monastery">Rizopolozhenskiy monastery</string>
    <string name="spaso_efimyev_monastery">Spaso-Efimyev monastery</string>
    <string name="suzdal_kremlin">Suzdal Kremlin</string>
    <string name="trading_area">Historical Trading Area</string>
    <string name="wooden_archtecture_museum">Wooden architecture museum</string>
    <string name="spaso_preobrazhenskiy_monastery">Spaso-Preobrazhenskiy monastery</string>
    <string name="spaso_preobrazhenskiy_monastery_address">Lakina str., 1-a</string>
    <string name="armored_train">\"Ilya Muromets\" armored train</string>
    <string name="armored_train_address">Vladimirskoe highway, in the park of the 50th anniversary of the Soviet authority</string>
    <string name="karacharovo">Karacharovo village</string>
    <string name="karacharovo_address">Karacharovo microdistrict</string>
    <string name="monument_to_ilya_muromets">Monument to Ilya Muromets</string>
    <string name="monument_to_ilya_muromets_address">Observation deck in Okskiy park</string>
    <string name="murom_bridge">Murom bridge</string>
    <string name="murom_bridge_address">Located at the turn from the Nizhny Novgorod highway (route P72, P125)</string>
    <string name="railway_museum">Railway station and museum</string>
    <string name="railway_museum_address">Privokzalnaya square</string>
    <string name="svyato_voznesenskiy_cathedral">Svyato-Voznesenskiy Cathedral</string>
    <string name="svyato_voznesenskiy_cathedral_address">Moskovskaya str., 15a</string>
    <string name="ww2_monument_verbovchany">World War 2 monument to Verbovchan citizens</string>
    <string name="ww2_monument_verbovchany_address">located at the intersection of Leningradskaya and 30 Let Pobedy streets</string>
    <string name="zvorykin_monument">Monument to Vladimir Zvorykin</string>
    <string name="zvorykin_monument_address">Pervomajskaya str., 4</string>
    <string name="chernobyl_monument">Chernobyl disaster monument</string>
    <string name="bmp">Monument to veterans of military actions</string>
    <string name="dragon">\"Skyrim\" monument</string>
    <string name="fountain">City singing fountain</string>
    <string name="kosminov_monument">Monument to city founder I.S. Kosminov</string>
    <string name="seamen_monument">Monument to the dead seamen</string>
    <string name="pentagon">\"Pentagon\" building</string>
    <string name="stella">World War 2 Stella</string>
    <string name="golden_gates_description">A road to the city is opened by the Golden Gate (1164).
        In their meaning they were like the Golden Gate of Constantinople or the Golden Gates
        of Kiev,from which the road to the heart of the capital began - to the monasteries and the
        St. Sophia Cathedral. But the Golden Gate of Vladimir was not only the triumphal arch of the
        city. It was a battle fortress that could withstand the onslaught of the Tatar hordes.
    </string>
    <string name="central_park_description">Entertainment in the park is not limited only to
        attractions. Concerts, contests, meetings with interesting people are held constantly here.
        And always holidays are celebrated by special programs. There are exhibitions of children's
        drawings, gaming, theatrical, and sports competitions, performances of creative groups.
    </string>
    <string name="dmitrieskiy_cathedral_description">the court temple, built by Vsevolod the 
        Big Nest in the prince\'s court and consecrated in honor of the Great Martyr Demetrius 
        of Thessalonica. According to N. N. Voronin, it was built in 1194-1197. 
        The cathedral is famous for its white stone carvings - its walls are decorated with about 
        600 reliefs depicting saints, mythical and real animals. Most of the reliefs were preserved 
        in their original form.
    </string>
    <string name="georgievakaya_street_description">Georgievskaya street recently became pedestrian
        with two new viewing platforms appeared at once. Georgievskaya street was landscaped by the
        day of the city of Vladimir in 2015 - the buildings were restored, the road was laid with
        paving stones, set benches, set up sculptures, and at the end of the street there was an
        observation deck with views of the Uspenskiy Cathedral.
    </string>
    <string name="city_council_description">The building of the City Duma was built in 1907 in the very center
        of the city on Cathedral Square with the money of Vladimir merchants.
        The City Duma is a 2-story building under a metal four-tiled roof.
        The central facade ends on two sides with two small tents.
        The facades are decorated with elements typical of Old Russian architecture.
        The building is decorated with a keel arch under the balcony at the level of the 2nd floor.
    </string>
    <string name="crystal_museum_description">The work of the masters of glass and crystal is represented by
        products that can only cause admiration. From colored glass and crystal there are presented 
        instruments for wine, water, honey, as well as vases, decorative dishes and other products.
    </string>
    <string name="patriarchal_gardens_description">One of the most beautiful places in Vladimir.
        The garden dates back to the 16th century. In Vladimir there was no patriarch\'s residence,
        but the cherry orchard was specially planted, where the capital\'s clergy came to rest.
        Patriarchal gardens are 3 hectares of land planted with dozens of varieties of fruit trees
        and shrubs, berries, wild plants and herbs. The garden descends to the Klyazma steps, it is
        multi-level, presented in the traditions of French park architecture.
    </string>
    <string name="alexander_nevskiy_square_description">The square located next to the city\'s
        planetarium is very small in space. In the square there is a monument to Alexander Nevsky.
        The uniqueness of this place in a stunning form opening to the Klyazmen floodplain.
        The lawns with wood framing prevail.
    </string>
    <string name="observation_deck_description">From the observation platform in Pushkin Park one
        can see the architectural monuments of Vladimir and the magnificent panorama of Vladimir\'s
        expanses, in the distance one can see the Country Park. On July 28, 2007, in connection with
        the 850th anniversary of the transfer of the capital of Rus from Kiev to Vladimir on the
        observation platform a monument to the founder of the city, Prince Vladimir Krasnoe
        Solnyshko (Red Sun) and Saint Fedor, the baptizer of the Vladimir land.
    </string>
    <string name="spasskiy_hill_description">One of the new sightseens - a small square near the
        church, called "Spasskiy Hill" was landscaped to the City Day of Vladimir in 2014.
        On the Spasskiy hill, guests are greeted by the "Oak tree".It is known that it is widespread
        in the forests of the region. From the observation platform of the Spasskiy Hill,
        one will see a beautiful view on the Uspenskiy Cathedral.
    </string>
    <string name="old_pharmacy_description">A two-storey semi-stone house under an iron roof was
        built in the late 18th century. as an outbuilding at the gubernia house. In 1805, on
        September 15, the first state pharmacy was opened in the Vladimir region on the first floor.
        Before that time, there was only a private pharmacy in the city, opened as far back as 1781.
        Until 2011, on the first floor of the house, there was a pharmacy, known to the citizens as
        "old pharmacy".
    </string>
    <string name="lunacharskiy_theatre_description">The Drama Theater in Vladimir was founded in
        1848 and is one of the oldest in the country. The repertoire of the theater includes
        performances based on the works of famous classical authors, as well as plays by
        contemporary playwrights and fairy tales for children.
    </string>
    <string name="uspenskiy_cathedral_description">An outstanding monument of white stone
        architecture of pre-Mongol Rus. Orthodox church of the Vladimir diocese; also the state
        museum. Historically, before the rise of Moscow, was the main (cathedral) temple of
        Vladimir-Suzdal Rus, the Vladimir and Moscow princes married in the great reign. A monument
        of Russian architecture of the 12th century, which served as a model for a number of later
        cathedrals, including the Uspensky Cathedral of Aristotle Fioravanti. One of the few
        churches in which the unique frescoes of Andrei Rublev are preserved.
    </string>
</resources>