<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <ImageView
            android:id="@+id/image_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            tools:src="@drawable/golden_gates"/>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="8dp" >

                <TextView
                    android:layout_margin="8dp"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/name_text_view_details"
                    android:layout_width="0dp"
                    android:layout_gravity="fill_horizontal"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    tools:text="@string/golden_gates"/>

                <TextView
                    android:id="@+id/address_address_tv"
                    android:layout_margin="8dp"
                    android:text="@string/address"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_text_view_details"
                    android:layout_width="0dp"
                    android:layout_gravity="fill_horizontal"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    tools:text="@string/golden_gates_address" />

            </GridLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description_tv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18sp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            tools:text="@string/golden_gates_description"/>

    </LinearLayout>

</ScrollView>